fixed button visibility

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ img {
   border: 2px solid black;
 }
 
-.results {
+#results {
   display: none;
 }
 
